--- a/index.html
+++ b/index.html
@@ -1,111 +1,125 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-	<meta charset="utf-8">
-	<title>HTML Academy: Техномарт</title>
-	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet"> </head>
+<meta charset="utf-8">
+<title>HTML Academy: Техномарт</title>
+<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+<link href="css/normalize.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+</head>
 
 <body>
-	<header>
-		<nav class="upper-menu">
-			<div class="upper-logo">
-				<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart"></a>
-			</div>
-			<form action="#" method="get">
-				<button name="search"></button>
-				<input type="text" name="search" placeholder="Поиск:"> </form> <a href="#" class="main-action">Закладки: 0</a> <a href="#" class="main-action">Корзина: 0</a> <a href="#" class="main-action">Оформить заказ</a> </nav>
-		<section class="main-info">
-			<h2 class="main-describe">Интернет-магазин <br>строительных материалов 
-		<br>и инструментов для ремонта</h2> <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
-			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-			<button name="enter" class="enter">Войти</button> <a href="#" class="reg">Регистрация</a>
-			<nav class="main-menu">
-				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="#">Компания</a></li>
-					<li><a href="catalog.html">Каталог</a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Доставка</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-			</nav>
-		</section>
-	</header>
-	<main>
-		<section class="add-info">
-			<h3>Компания "Техномарт"</h3>
-			<p class="add-info add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-			<p class="add-info add-info-text">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
-			<ul class="delivery">
-				<li class="delivery name">Деловые линии</li>
-				<li class="delivery name">Автотрейдинг</li>
-				<li class="delivery name">ЖелДорЭкспедиция</li>
-			</ul> <a href="#" class="about-us">Подробнее о компании</a>
-			<h3>Контакты</h3>
-			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-			<a href="#"><img src="img/map.png"></a>
-			<div class="visually-hidden"> <img src="#" name="big_map">
-				<button name="exit"><img src="#"></button>
-			</div> <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> </section>
-	</main>
-	<footer>
-		<section class="down-menu">
-			<div class="down-logo">
-				<a href="index.html" class="main-link"><img src="img/technomart.svg" class="down-technomart"></a>
-			</div>
-			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
-				<br> +7 (812) 555-05-55 </p>
-			<ul class="menu-pages">
-				<li><a href="#">Компания</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="#">Доставка</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<ul class="menu-pages-mat">
-				<li><a href="#">Материалы</a></li>
-				<li><a href="#">Техника</a></li>
-				<li><a href="#">Инструмент</a></li>
-				<li><a href="#">Спецпредложения</a></li>
-			</ul>
-		</section>
-		<section class="links">
-			<p>2010-2017 Компания "Техномарт"
-				<br> Все права защищены </p>
-			<a href="www.vk.com"><img src="vk.jpg"></a>
-			<a href="www.facebook.com"><img src="fb.jpg"></a>
-			<a href="www.instagram.com"><img src="ins.jpg"></a>
-			<table>
-				<tr class="tab-article">
-					<td>Обратная связь:</td>
-					<td>Разработано -</td>
-				</tr>
-				<tr class="tab-links">
-					<td> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a> </td>
-					<td> <a href="www.htmlacademy.ru">htmlacademy.ru</a> </td>
-				</tr>
-			</table>
-		</section>
-	</footer>
-	<div class="visually-hidden">
-		<form action="#" method="post">
-			<label>Ваше имя:
-				<input type="text" name="your_name" placeholder="Имя Фамилия">
-			</label>
-			<label>Ваш E-mail:
-				<input type="text" name="your_name" placeholder="email@example.com">
-			</label>
-			<label>Текст письма:
-				<input type="text" name="your_name" placeholder="В свободной форме">
-			</label>
-			<input type="submit" name="send" value="Отправить">
-			<button name="exit" style="#"></button>
-		</form>
+<header>
+  <nav class="upper-menu">
+    <div class="upper-logo"> 
+		<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart">
+		</a> 
 	</div>
+    <form action="#" method="get">
+      <button name="search"></button>
+      <input type="text" name="search" placeholder="Поиск:">
+    </form>
+    <a href="#" class="main-action">Закладки: 0</a> 
+	<a href="#" class="main-action">Корзина: 0</a> 
+	<a href="#" class="main-action">Оформить заказ</a> 
+  </nav>
+  <section class="main-info">
+    <h2 class="main-describe">Интернет-магазин<br>
+      строительных материалов <br>
+      и инструментов для ремонта
+	</h2>
+    <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55
+	</a>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+    <button name="enter" class="enter">Войти</button>
+    <a href="#" class="reg">Регистрация</a>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </section>
+</header>
+<main>
+  <section class="add-info">
+    <h3>Компания "Техномарт"</h3>
+    <p class="add-info add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+    <p class="add-info add-info-text">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+    <ul class="delivery">
+      <li class="delivery name">Деловые линии</li>
+      <li class="delivery name">Автотрейдинг</li>
+      <li class="delivery name">ЖелДорЭкспедиция</li>
+    </ul>
+    <a href="#" class="about-us">Подробнее о компании</a>
+    <h3>Контакты</h3>
+    <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+    <a href="#"><img src="img/map.png"></a>
+    <div class="visually-hidden"><img src="#" name="big_map">
+      <button name="exit"><img src="#"></button>
+    </div>
+    <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> 
+  </section>
+</main>
+<footer>
+  <section class="down-menu">
+    <div class="down-logo">
+		<a href="index.html" class="main-link"><img src="img/technomart.svg" class="down-technomart">
+		</a> 
+	</div>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+      +7 (812) 555-05-55</p>
+    <ul class="menu-pages">
+      <li><a href="#">Компания</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <ul class="menu-pages-mat">
+      <li><a href="#">Материалы</a></li>
+      <li><a href="#">Техника</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+    </ul>
+  </section>
+  <section class="links">
+    <p>2010-2017 Компания "Техномарт"<br>
+      Все права защищены</p>
+    <a href="www.vk.com"><img src="vk.jpg"></a>
+	<a href="www.facebook.com"><img src="fb.jpg"></a>
+	<a href="www.instagram.com"><img src="ins.jpg"></a>
+    <table>
+      <tr class="tab-article">
+        <td>Обратная связь:</td>
+        <td>Разработано -</td>
+      </tr>
+      <tr class="tab-links">
+        <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
+        <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+      </tr>
+    </table>
+  </section>
+</footer>
+<div class="visually-hidden">
+  <form action="#" method="post">
+    <label>Ваше имя:
+      <input type="text" name="your_name" placeholder="Имя Фамилия">
+    </label>
+    <label>Ваш E-mail:
+      <input type="text" name="your_name" placeholder="email@example.com">
+    </label>
+    <label>Текст письма:
+      <input type="text" name="your_name" placeholder="В свободной форме">
+    </label>
+    <input type="submit" name="send" value="Отправить">
+    <button name="exit" style="#"></button>
+  </form>
+</div>
 </body>
-
 </html>
