--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
     <nav class="color-nav"> 
 		<div class="main-width">
 			<div class="upper-menu">
-		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
+		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart" alt="technomart logo"> </a>
       <form action="#" method="get"  class="search">
         <a href="#" name="search" class="glass"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
@@ -47,7 +47,7 @@
   </header>
   <main>
 	  <div class="main-width">
-    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg"></a> <img src="img/icon-right-small.svg"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg"> <a href="#">Перфораторы</a> </div>
+    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg" alt="house logo"></a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="#">Перфораторы</a> </div>
     <section class="sub-menu">
       <div class="perf">
         <h3>Перфораторы</h3>
@@ -115,14 +115,14 @@
         </div>
         <div class="list-of-goods">
           <ul class="items">
-            <li class="item-flex"><img src="img/Perforator_1.jpg">
+            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
               <div class="descrip-item">
                 <p class="product-name">Перфоратор Bosh BFG 3000</p>
                 <p class="old-value">22500 Р.</p>
                 <p class="new-value">15500 Р.</p>
               </div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_2.jpg">
+            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
@@ -130,7 +130,7 @@
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag">
+				<img src="img/new flag.png" class="flag" alt="flag logo">
 				<div class="descrip-item">
 				<a href="#" class="buy"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr" fill=""><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Купить</a>
 				<a href="#" class="bookmarks">В закладки</a>
@@ -138,7 +138,7 @@
               <p class="new-value-rows">12500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_1.jpg">
+            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 3000</p>
               <p class="old-value">22500 Р.</p>
@@ -146,37 +146,37 @@
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag">
-				<img src="img/Perforator_2.jpg">
+				<img src="img/new flag.png" class="flag" alt="flag logo">
+				<img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
               <p class="new-value">25500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_3.jpg">
+            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 2000</p>
               <p class="new-value-rows">12500 Р.</p>
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag">
-				<img src="img/Perforator_1.jpg">
+				<img src="img/new flag.png" class="flag" alt="flag logo">
+				<img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 3000</p>
               <p class="old-value">22500 Р.</p>
               <p class="new-value">15500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_2.jpg">
+            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
               <p class="new-value">25500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_3.jpg">
+            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 2000</p>
               <p class="new-value-rows">12500 Р.</p>
@@ -191,7 +191,7 @@
   <footer>
     <section class="down-menu">
 		<div class="main-width">
-      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
+      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart" alt="technomart logo"> </a>
         <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
       </div>
       <div class="tech-down">
@@ -211,9 +211,9 @@
             Все права защищены</p>
         </div>
         <div class="social-networks">
-          <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a> </div>
-          <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a> </div>
-          <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a> </div>
+          <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic" alt="vkontakte logo"></a> </div>
+          <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic" alt="facebook logo"></a> </div>
+          <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic" alt="instagram logo"></a> </div>
         </div>
         <div class="cont-table">
           <table>
