--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav class="color-nav">
 		<div class="main-width">
 		<div class="upper-menu">
-		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
+		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart" alt="technomart logo"> </a>
       <form action="#" method="get"  class="search">
         <a href="#" name="search" class="glass"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
       </form>
-      <a href="#" class="main-action book"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" class="bookmark-pic" ><path d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>Закладки: 0</a> <a href="#" class="main-action cart"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic"><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Корзина: 0</a> <a href="#" class="main-action order">Оформить заказ</a>
+      <a href="#" class="main-action book"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" class="bookmark-pic"><path d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>Закладки: 0</a> <a href="#" class="main-action cart"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic"><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Корзина: 0</a> <a href="#" class="main-action order">Оформить заказ</a>
 			</div>
 			</div>
 			</nav>
@@ -62,9 +62,9 @@
         <h3>Контакты</h3>
         <p class="add-info-text-map">Вы можете забрать товар сами,
           заехав в наш офис:</p>
-        <a href="#"><img src="img/map.png"></a>
-        <div class="visually-hidden"><img src="#" name="big_map">
-          <button name="exit"><img src="#"></button>
+        <a href="#"><img src="img/map.png" alt="map logo"></a>
+        <div class="visually-hidden"><img src="#" name="big_map" alt="big map logo">
+          <button name="exit"></button>
         </div>
         <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> </div>
     </section>
@@ -73,7 +73,7 @@
   <footer>
     <section class="down-menu">
 		<div class="main-width">
-      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
+      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart" alt="technomart logo"> </a>
         <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
       </div>
       <div class="tech-down">
